[package]
name = "data_pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.4.0"
serde_json = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false }
chrono = "0.4.26"
